--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,11 @@ body {
 	justify-content: space-between;
 }
 
+.footer {
+	position: absolute;
+	bottom: 0px;
+}
+
 @media (max-width: 990px) {
 	.App {
 		flex-direction: column;
