--- a/src/InfoBox.css
+++ b/src/InfoBox.css
@@ -1,11 +1,12 @@
 .infoBox {
-	flex: 1;
+	flex: 0.5;
 	cursor: pointer !important;
+	margin-bottom: 20px;
 }
 
-.infoBox:not(:last-child) {
+/* .infoBox:not(:last-child) {
 	margin-right: 10px;
-}
+} */
 
 .infoBox__cases {
 	color: #cc1034;
